--- a/TextAnalisis/TextAnalisis.csproj
+++ b/TextAnalisis/TextAnalisis.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextAnaliser.cs" />
+    <Compile Include="TextMetrics\LineCountMetrics.cs" />
     <Compile Include="TextMetrics\IMetric.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -55,6 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextMetrics\TextLengthMetric.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
